[package]
name = "mdbks"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = "0.12.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
urlencoding = "2.1.3"
