[package]
name = "mdbks"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
config = { version = "0.15.22", features = ["toml"] }
dialoguer = "0.12.0"
env_logger = "0.11.10"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
urlencoding = "2.1.3"
